--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -38,8 +38,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fixture <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="{{ path('iaw_participante_index') }}">Lista de fixtures</a></li>
-            <li><a href="{{ path('iaw_participante_add') }}">Nuevo fixture</a></li>
+            <li><a href="{{ path('iaw_torneo_index') }}">Lista de fixtures</a></li>
+            <li><a href="{{ path('iaw_torneo_add') }}">Nuevo fixture</a></li>
           </ul>
         </li>
       </ul>
