--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -82,7 +82,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Partido <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="{{ path('iaw_participante_index') }}">Lista de fixtures</a></li>
-            <li><a href="{{ path('iaw_participante_add') }}">Nuevo fixture</a></li>
+            <li><a href="{{ path('iaw_fixture_add') }}">Nuevo fixture</a></li>
           </ul>
         </li>
       </ul>
