--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -57,10 +57,9 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fixture <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Partidos <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="{{ path('iaw_participante_index') }}">Lista de fixtures</a></li>
-            <li><a href="{{ path('iaw_participante_add') }}">Nuevo fixture</a></li>
+            <li><a href="{{ path('iaw_partido_index') }}">Pendientes</a></li>
           </ul>
         </li>
       </ul>
