Visitante - Editor - Admin
Cambios hechos para los 3 usuarios.

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -2,4 +2,59 @@
 
 {% block body %}
 	{{ parent() }}
+	<body>
+
+		<div class="container marketing">
+
+      <!-- START THE FEATURETTES -->
+			<br/>
+			<br/>
+			<br/>
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Conoce a los participantes.</h2>
+          <p class="lead"> 30 equipos que lo darán todo para conseguir el título.</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="uploads/claro.png" data-holder-rendered="true">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7 col-md-push-5">
+          <h2 class="featurette-heading">Estadisticas</h2>
+          <p class="lead">Conoce los ultimos resultados y la tabla de posiciones.</p>
+        </div>
+        <div class="col-md-5 col-md-pull-7">
+          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="uploads/estadisticas.png" data-holder-rendered="true">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Fixture</h2>
+          <p class="lead">Enterate de todos los proximos enfrentamientos.</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="uploads/enfrentamiento.jpg" data-holder-rendered="true">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <!-- /END THE FEATURETTES -->
+
+
+      <!-- FOOTER -->
+      <footer>
+        <p class="pull-right"><a href="#">Ir arriba</a></p>
+      </footer>
+
+    </div><!-- /.container -->
+
+	</div>
 {% endblock %}
