--- a/src/IAW/TorneoBundle/Resources/views/Partido/index.html.twig
+++ b/src/IAW/TorneoBundle/Resources/views/Partido/index.html.twig
@@ -8,19 +8,54 @@
       <div class="page-header margin-none">
         <h2 class="padding-none">Partidos</h2>
       </div>
-      <div class="table-responsive">
-        <table class="table table-striped table-hover" id="tablaAjustada">
-          <thead>
-              <tr>
-                  <th>Local</th>
-                  <th>Visitante</th>
-                  <th>Acción</th>
-              </tr>
-          </thead>
-          <tbody>
 
+
+              {% set nroFecha = 1 %}
               {% for partido in partidos %}
                   <tr data-id="{{ partido.id }}">
+
+                    {% if loop.first %}
+                    <div class="well well-sm" id="wellFecha">{{'Fecha ' ~ nroFecha }}</div>
+                    <div class="table-responsive">
+                      <table class="table table-hover" id="tablaAjustada">
+                        <thead>
+                            <tr>
+                              <th>Local</th>
+                              <th>Visitante</th>
+                              {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_EDITOR')  %}
+                              <th>Accion</th>
+                              {% endif %}
+                            </tr>
+                        </thead>
+                        <tbody>
+                          {# Aca va la fila con todo lo que va despues#}
+
+                    {% elseif  partidos[loop.index0 - 1].fecha == partido.fecha %}
+                      {# Insertar una fila mas, no hay cambios#}
+
+
+                    {% elseif partidos[loop.index0 - 1].fecha != partido.fecha %}
+                      {# Cambio de fecha, cierro la tabla anterior y abro una nueva #}
+                      </tbody>
+                    </table>
+                  </div>
+                    {% set nroFecha = nroFecha + 1 %}
+                    <div class="well well-sm" id="wellFecha">{{'Fecha ' ~ nroFecha }}</div>
+                    <div class="table-responsive">
+                      <table class="table table-hover" id="tablaAjustada">
+                        <thead>
+                          <tr>
+                            <th>Local</th>
+                            <th>Visitante</th>
+                            {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_EDITOR')  %}
+                            <th>Accion</th>
+                            {% endif %}
+                          </tr>
+                        </thead>
+                        <tbody>
+                    {% endif %}
+
+
 
 
 
@@ -41,17 +76,25 @@
                         {{partido.equipoVisitante}}
                       </td>
 
+                      {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_EDITOR')  %}
                       <td class="actions">
                         <a href="{{ path('iaw_partido_edit', {id: partido.id}) }}" class="btn btn-sm btn-info">
                           Editar
                         </a>
                       </td>
+                      {% endif %}
+
+                      {% if loop.last %}
+                        {# Cierro el tag de la ultima tabla#}
+                          </tbody>
+                        </table>
+                      </div>
+                      {% endif %}
+
 
                   </tr>
               {% endfor %}
-            </tbody>
-          </table>
-        </div>
+
       </div>
     </div>
 
