--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -77,13 +77,16 @@
     {% elseif is_granted('IS_AUTHENTICATED_ANONYMOUSLY')  %}
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Partido <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="{{ path('iaw_participante_index') }}">Lista de fixtures</a></li>
-            <li><a href="{{ path('iaw_participante_index') }}">Nuevo fixture</a></li>
-          </ul>
-        </li>
+          <li><a href="{{ path('iaw_torneo_estadisticas') }}">Estadisticas</a></li>
+      </ul>
+      <ul class="nav navbar-nav">
+          <li><a href="{{ path('iaw_participante_index') }}">Participantes</a></li>
+      </ul>
+      <ul class="nav navbar-nav">
+          <li><a href="{{ path('iaw_partido_verPartidos') }}">Fixture</a></li>
+      </ul>
+      <ul class="nav navbar-nav">
+          <li><a href="{{ path('iaw_partido_resultadosPartidos') }}">Resultados</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/login">Log in</a></li>
