--- a/src/IAW/ParticipanteBundle/Resources/views/Participante/view.html.twig
+++ b/src/IAW/ParticipanteBundle/Resources/views/Participante/view.html.twig
@@ -10,7 +10,7 @@
 					{% if participante.imagePath != '' %}
 						<img src="{{ asset('uploads/' ~ participante.imagePath) }}" heigth="150px" width="150px" />
 					{% elseif participante.imagePath == ''%}
-						<img src="{{ asset('uploads/noImage.png') }}" heigth="150px" width="150px" />
+						<img src="{{ asset('uploads/noImage.png') }}"  heigth="150px" width="150px" />
 					{% endif %}
 				</dl>
 			</div>
@@ -27,18 +27,18 @@
 					</dd>
 				</dl>
 			</div>
+			{% if is_granted('ROLE_ADMIN') %}
 			<div class="col-md-3">
 	    	<h3>Acciones</h3>
-			<p>
+				<p>
 		    	<a href="{{ path('iaw_participante_edit', { id: participante.id }) }}" class="btn btn-primary btn-lg btn-block">
 		    		<span class="glyphicon glyphicon-edit"></span>
 		        	'Editar participante'
 				 </a>
-			</p>
+				</p>
 				{{ include('IAWParticipanteBundle:Participante:forms/form.html.twig', {form: delete_form}) }}
-      <p>
-      </p>
 	    </div>
+			{% endif %}
 		</div>
 		<div class="row">
 			<div class="col-md-9">
