--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -16,7 +16,7 @@
           <p class="lead"> 30 equipos que lo darán todo para conseguir el título.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="uploads/claro.png" data-holder-rendered="true">
+          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="uploads/claro.png" width="300px" height="300px" data-holder-rendered="true">
         </div>
       </div>
 
@@ -28,7 +28,7 @@
           <p class="lead">Conoce los ultimos resultados y la tabla de posiciones.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="uploads/estadisticas.png" data-holder-rendered="true">
+          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="uploads/estadisticas.png" width="300px" height="300px" data-holder-rendered="true">
         </div>
       </div>
 
@@ -40,7 +40,7 @@
           <p class="lead">Enterate de todos los proximos enfrentamientos.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="uploads/enfrentamiento.jpg" data-holder-rendered="true">
+          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="uploads/enfrentamiento.jpg" width="300px" height="300px" data-holder-rendered="true">
         </div>
       </div>
 
