--- a/src/IAW/ParticipanteBundle/Resources/views/Participante/index.html.twig
+++ b/src/IAW/ParticipanteBundle/Resources/views/Participante/index.html.twig
@@ -42,6 +42,9 @@
                         <a href="#" class="btn btn-sm btn-danger btn-delete">
                           Eliminar
                         </a>
+                        <a href="{{ path('iaw_jugador_add', {participanteID: participante.id}) }}" class="btn btn-sm btn-info">
+                           Jugador
+                        </a>
                         {% endif %}
 
                       </td>
