--- a/src/IAW/ParticipanteBundle/Resources/views/Participante/view.html.twig
+++ b/src/IAW/ParticipanteBundle/Resources/views/Participante/view.html.twig
@@ -56,7 +56,10 @@
 						<dt><h3>Plantel</h3></dt>
 						<dd>
 							{% for jugador in jugadores %}
+							<div class="col-md-2">
+								<h4 align="center"> {{ jugador.nombre ~ ' ' ~ jugador.apellido }} </h4>
 								<img src="{{ asset('uploads/' ~ jugador.imagen) }}"/>
+							</div>
 							{% endfor %}
 
 						</dd>
