--- a/src/IAW/TorneoBundle/Resources/views/Estadisticas/index.html.twig
+++ b/src/IAW/TorneoBundle/Resources/views/Estadisticas/index.html.twig
@@ -15,6 +15,7 @@
         <table class="table table-striped table-hover" id="tablaAjustada">
           <thead>
               <tr>
+                  <th style="width: 50px;">#</th>
                   <th>Equipo</th>
                   <th>PJ</th>
                   <th>PG</th>
@@ -27,6 +28,7 @@
           <tbody>
               {% for estadistica in estadisticas %}
                   <tr data-id="{{ estadistica.id }}">
+                      <td>{{ loop.index }}
                       <td>
                         {% if estadistica.imagenEquipo != '' %}
                              <img src="{{ asset('uploads/' ~ estadistica.imagenEquipo) }}" style="width:30px;height:30px;" />
