--- a/src/IAW/TorneoBundle/Resources/views/Torneo/index.html.twig
+++ b/src/IAW/TorneoBundle/Resources/views/Torneo/index.html.twig
@@ -27,6 +27,9 @@
                         <a href="{{ path('iaw_partido_index') }}" class="btn btn-sm btn-info">
                           Ver partidos
                         </a>
+                        <a href="{{ path('iaw_partido_index') }}" class="btn btn-sm btn-danger">
+                          Eliminar
+                        </a>
                       </td>
                   </tr>
               {% endfor %}
