--- a/src/IAW/TorneoBundle/Resources/views/Torneo/index.html.twig
+++ b/src/IAW/TorneoBundle/Resources/views/Torneo/index.html.twig
@@ -27,7 +27,7 @@
                         <a href="{{ path('iaw_partido_index') }}" class="btn btn-sm btn-info">
                           Ver partidos
                         </a>
-                        <a href="{{ path('iaw_partido_index') }}" class="btn btn-sm btn-danger">
+                        <a href="{{ path('iaw_torneo_eliminar', {id: torneo.id}) }}" class="btn btn-sm btn-danger">
                           Eliminar
                         </a>
                       </td>
