--- a/src/IAW/ParticipanteBundle/Resources/views/Participante/edit.html.twig
+++ b/src/IAW/ParticipanteBundle/Resources/views/Participante/edit.html.twig
@@ -20,15 +20,9 @@
             </div>
 
             <div class="form-group">
-                {{ form_label(form.members) }}
-                {{ form_widget(form.members,{ 'attr' : {'class' : 'form-control', 'placeholder' : 'Miembros'} }) }}
-                <span class="text-danger"> {{ form_errors(form.members) }}</span>
-            </div>
-
-            <div class="form-group">
-                {{ form_label(form.imagePath) }}
-                {{ form_widget(form.imagePath,{ 'attr' : {'class' : 'form-control'}}) }}
-                <span class="text-danger"> {{ form_errors(form.imagePath) }}</span>
+                {{ form_label(form.descripcion) }}
+                {{ form_widget(form.descripcion,{ 'attr' : {'class' : 'form-control', 'placeholder' : 'Miembros'} }) }}
+                <span class="text-danger"> {{ form_errors(form.descripcion) }}</span>
             </div>
 
             <p>
