--- a/src/IAW/TorneoBundle/Resources/views/Partido/edit.html.twig
+++ b/src/IAW/TorneoBundle/Resources/views/Partido/edit.html.twig
@@ -57,6 +57,12 @@
                   <span class="text-danger"> {{ form_errors(form.golesEquipoVisitante) }}</span>
               </div>
 
+              <div class="form-group">
+                  {{ form_label(form.descripcion) }}
+                  {{ form_widget(form.descripcion,{ 'attr' : {'class' : 'form-control'}}) }}
+                  <span class="text-danger"> {{ form_errors(form.descripcion) }}</span>
+              </div>
+
               {% if is_granted('ROLE_ADMIN') %}
               <div class="form-group">
                   {{ form_label(form.editor) }}
