--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -51,6 +51,7 @@
 
       <!-- FOOTER -->
       <footer>
+				<p class="pull-left"><a href="{{ path('iaw_user_autores') }}">Autores y usuarios</a></p>	
         <p class="pull-right"><a href="#">Ir arriba</a></p>
       </footer>
 
